# intro-to-gpu-programming

module10/assignment/: CMakeLists.txt  run.sh
module10/assignment/src/: CMakeLists.txt  vector_operations.cc  vector_operations.cl
module11/assignment/: CMakeLists.txt  run.sh
module11/assignment/src/: CMakeLists.txt  Convolution.cl  Convolution.cpp  Scaling.cl
module13/assignment/: example.txt  run.sh
module13/assignment/include/: opencl_utils.h
module13/assignment/src/: CMakeLists.txt  even_odd.cc  even_odd.cl  opencl_utils.cc
module3/: Makefile  assignment.cu
module4/assignment/: CMakeLists.txt  run.sh
module4/assignment/docs/: caesar_lorem_shift_3.txt  laptop_125k.txt  laptop_1M.txt  laptop_250k.txt  laptop_2M.txt  laptop_500k.txt
module4/assignment/include/: cuda_kernels.h
module4/assignment/src/: CMakeLists.txt  caesar.cu  cpu_proc.cu  host_memory.cu  pinned_memory.cu
module5/assignment/: .gitignore  run.sh
module5/assignment/docs/: laptop_125k.txt  laptop_1M.txt  laptop_250k.txt  laptop_2M.txt  laptop_500k.txt
module5/assignment/include/: cuda_kernels.h
module5/assignment/src/: CMakeLists.txt  const_memory.cu  shared_memory.cu
module6/assignment/: build.sh
module6/assignment/docs/: module6_stretch_problem.cu  results_1024.txt  results_2048.txt  results_4096.txt  results_8192.txt
module6/assignment/include/: argument_parser.h  register_memory_kernels.h
module6/assignment/src/: CMakeLists.txt  pinned_memory.cu  shared_memory.cu
module7/assignment/: CMakeLists.txt  run.sh
module7/assignment/docs/: module7_stretch_problem.cu  results_1024.txt  results_2048.txt  results_4096.txt  results_8192.txt  stretch_problem_result.txt
module7/assignment/include/: shared_mem_cuda_kernels.h
module7/assignment/src/: CMakeLists.txt  caesar.cu  const_memory.cu  host_memory.cu  register_memory.cu  streams.cu
module8/assignment/: CMakeLists.txt  run.sh
module8/assignment/docs/: run-1024-1024.txt  run-1920-1080.txt  run-2048-2048.txt  run-4096-4096.txt  run-8192-8192.txt  use_in_final_project.odt
module8/assignment/src/: CMakeLists.txt  convolution2d.cu  matrix_scale.cu
module9/assignment/: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml  run.sh
module9/assignment/docs/: edge_detection.pgm  filtered_image.pgm
module9/assignment/src/: CMakeLists.txt  npp_convolution.cu  triangle_count.cu  vector_operations_thrust.cu
